# docs/openapi.json
@@ -960,6 +960,45 @@
         ]
       }
     },
+    "/workout/trainer/logs/{clientId}": {
+      "get": {
+        "operationId": "WorkoutController_trainerGetWorkoutLogs",
+        "parameters": [
+          {
+            "name": "clientId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/WorkoutLogResponseDto"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "JWT": []
+          }
+        ],
+        "summary": "Get all workout logs for a client (Trainer Only)",
+        "tags": [
+          "Workout"
+        ]
+      }
+    },
     "/workout/trainer/log-review/{logId}": {
       "patch": {
         "operationId": "WorkoutController_addWorkoutLogReview",
